fixed alignment of controller for responsiveness

--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 #buttons {
   height: 250px;
   width: 400px;
-  display: block;
-  margin-left: 60px;
-  margin-right: auto;
-  width: 33%;
+  margin-left: 47.5px;
 }
 
 body {
@@ -15,8 +12,13 @@ body {
 
 #top-button {
   height: 62.5px;
-  width: 33%;
+  width: 400px;
   display: block;
-  margin-bottom: 5px;
-  margin-left: 155px;
+  margin-bottom: 2.5px;
+  margin-left: 150px;
+}
+
+#right-btn,
+#down-btn {
+  margin-left: 2.5px;
 }
